# speaktype

./: .gitignore  Cargo.toml  PACKAGING.md  Spec.md  build-release.bat  build-with-cuda.ps1  build.ps1  install-deps.ps1
${PROJECT_ROOT}/.opencode/: memory.db  vectors.usearch
${PROJECT_ROOT}/.opencode/tantivy/: meta.json
.opencode/status-footer/: state.json
installer/: SpeakType.nsi
scripts/: build-installer.ps1  package-portable.ps1
src/: app.rs  main.rs
src/modules/: diagnostics.rs  engine.rs  error.rs  mod.rs  models.rs  paths.rs  postprocess.rs  recordings.rs  startup.rs  text_conversion.rs  tray.rs  voice_commands.rs
src/modules/audio/: mod.rs  vad.rs
src/modules/config/: mod.rs
src/modules/gui/: mod.rs  theme.rs  views.rs
src/modules/history/: mod.rs
src/modules/input/: mod.rs
src/modules/scenario/: mod.rs
src/modules/transcription/: audio_buffer.rs  mod.rs  transcriber.rs
src/modules/utils/: device.rs
src/modules/whisper/: model.rs
