[workspace]

[package]
name = "speaktype"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
cpal = "0.15"
enigo = "0.1"
arboard = "3.6"
whisper-rs = { version = "0.16", features = ["cuda"] }  # CUDA build for local whisper.cpp inference
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
tray-icon = { version = "0.24", default-features = false }
device_query = "2.0"
rdev = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
ferrous-opencc = "0.4"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
